immutable fix (#2384)